@@ -1,3 +1,8 @@
+2011-11-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-84
+	* Show list of sequences containing the selected sequence in the
+	  right lower panel. (bug 88620).
+
 2011-11-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-83
 	* Add errorNotification panel to present error details. (bug 88414).
